--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,6 +6,12 @@ pipeline {
     }
 
     stages {
+        stage('Checkout') {
+            steps {
+                git 'https://github.com/MAHossain1/java-graven-app.git'
+            }
+        }
+
         stage('Build jar') {
             steps {
                 script {
