--- a/JenkinsFile
+++ b/JenkinsFile
@@ -31,11 +31,11 @@ pipeline {
             steps {
                 script {
                     echo "building the docker image"
-                    withCredentials([usernamePassword(credentialsId: 'docker_hub_repo', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
-                        sh 'docker build -t  arman04/java-maven-app:jma-2.0 .'
-                        sh "echo $PASSWORD | docker login -u $USERNAME --password-stdin"
-                        sh 'docker push arman04/java-maven-app:jma-2.0'
-                    }
+                    // withCredentials([usernamePassword(credentialsId: 'docker_hub_repo', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
+                    //     sh 'docker build -t  arman04/java-maven-app:jma-2.0 .'
+                    //     sh "echo $PASSWORD | docker login -u $USERNAME --password-stdin"
+                    //     sh 'docker push arman04/java-maven-app:jma-2.0'
+                    // }
                 }
             }
         }
